# seal

crates/crypto/src/: lib.rs
crates/key-server/: Cargo.toml
crates/key-server/src/: errors.rs  externals.rs  metrics.rs  server.rs  signed_message.rs
crates/key-server/src/tests/: externals.rs  tle.rs
crates/seal-proxy/: Cargo.toml
crates/seal-proxy/src/: allowers.rs  config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  runtime.rs  server.rs
docker/seal-proxy/: Dockerfile
docker/seal-proxy/local-test/: config.alloy  docker-compose.yml  seal-proxy.yaml
docker/seal-proxy/local-test/dashboard/: datasources.yaml
docker/seal-proxy/local-test/metrics-generator/: Cargo.toml  Dockerfile
docker/seal-proxy/local-test/metrics-generator/src/: main.rs
examples/frontend/src/: AllowlistView.tsx
